--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "concurrently": "^7.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongodb": "^4.8.1"
+    "mongodb": "^4.8.1",
+    "mongoose": "^6.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
