--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "engines": {
+    "node": "18.7.0"
+  },
   "scripts": {
-    "heroku-prebuild": "cd client && npm ci && npm run build && move build ../server",
-    "start": "cd server && npm run start",
+    "client-build": "cd client && npm ci && npm run build && cd ../",
+    "server-build": "cd server && npm ci --dev && npm run build && cd ../",
+    "heroku-prebuild": "npm run client-build && npm run server-build && mv ./client/build ./server/",
+    "start": "cd server && node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "cd client && npm start",
+    "client": "cd client && npm run start",
     "server": "cd server && nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
