--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "client-build": "cd client && npm ci && npm run build && cd ../",
     "server-build": "cd server && npm ci --dev && cd ../",
-    "heroku-prebuild": "npm run client-build && npm run server-build && mv ./client/build ./server/",
+    "heroku-prebuild": "npm run client-build && npm run server-build && move ./client/build ./server/",
     "start": "cd server && node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "cd client && npm run start",
